[package]
name = "condest"
version = "0.2.1"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-condest"
description = "An implementation of the 1-norm and condition number estimator by Higham and Tisseur, 2000"
readme = "README.md"

categories = ["science"]
keywords = ["condition", "linalg", "matrix", "ndarray", "norm"]

[dependencies]
alga = "0.9.2"
cblas = "0.2"
lapacke = "0.2"
ndarray = "0.13"
num-traits = "0.2.8"
ordered-float = "1.0"
rand = "0.6"
rand_xoshiro = "0.1"

blas-traits = {git="https://github.com/hmunozb/blas-traits"}

[dev-dependencies]
ndarray-rand = "0.9"
#openblas-src = "0.7"
openblas-src = {version="0.7.0", default-features=false, features=["system"]}
#cblas-sys = "0.1.4"
lapacke-sys = "0.1.4"

