[package]
name = "condest"
version = "0.3.0"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-condest"
description = "An implementation of the 1-norm and condition number estimator by Higham and Tisseur, 2000"
readme = "README.md"

categories = ["science"]
keywords = ["condition", "linalg", "matrix", "ndarray", "norm"]

[dependencies]
cblas = "0.2"
lapacke = "0.2"
lapack-traits = "0.2.2"
ndarray = "0.13"
num-traits = "0.2"
ordered-float = "1.0"
rand = "0.7"
rand_distr = "0.2"
rand_xoshiro = "0.4"

[dev-dependencies]
ndarray-rand = "0.11"
#openblas-src = "0.9"
openblas-src = {version="0.9", default-features=false, features=["system"]}

