[package]
name = "condest"
version = "0.3.0"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-condest"
description = "An implementation of the 1-norm and condition number estimator by Higham and Tisseur, 2000"
readme = "README.md"

categories = ["science"]
keywords = ["condition", "linalg", "matrix", "ndarray", "norm"]

[dependencies]
cblas = "0.4"
lapacke = "0.5"
lapack-traits = {version="0.4", features=["simba"]}
ndarray = "0.15"
num-traits = "0.2"
ordered-float = "1.0"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
simba="0.6"

#[patch.crates-io]
#lapack-traits = {git="https://github.com/hmunozb/lapack-traits.git"}

[dev-dependencies]
ndarray-rand = "0.14"
#openblas-src = "0.9"
openblas-src = {version="0.10", default-features=false, features=["system"]}

